[gd_scene load_steps=3 format=2]

[ext_resource path="res://content/gui/overlays/other/BusMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]


[node name="BusMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0.258824, 0.258824, 0.258824, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 150
alignment = 1

[node name="LivingButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 181.0
margin_right = 728.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Living"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 459.0
margin_right = 728.0
margin_bottom = 587.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "City"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilityButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 737.0
margin_right = 728.0
margin_bottom = 865.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Utility"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 1015.0
margin_right = 728.0
margin_bottom = 1143.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/Margin/VBox/LivingButton" to="." method="_on_LivingButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/CityButton" to="." method="_on_CityButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/UtilityButton" to="." method="_on_UtilityButton_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/BackButton" to="." method="_on_BackButton_pressed"]
